--- a/4-learn-js/dom-projects/js-todo/src/app.css
+++ b/4-learn-js/dom-projects/js-todo/src/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Cutive+Mono&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bree+Serif&family=Cutive+Mono&display=swap");
 
 /*
 ! tailwindcss v3.4.3 | MIT License | https://tailwindcss.com
@@ -595,6 +595,10 @@ video {
   height: 1.5rem;
 }
 
+.h-full{
+  height: 100%;
+}
+
 .min-h-\[500px\]{
   min-height: 500px;
 }
@@ -607,12 +611,44 @@ video {
   width: 1.5rem;
 }
 
+.w-5{
+  width: 1.25rem;
+}
+
+.w-52{
+  width: 13rem;
+}
+
+.w-\[100px\]{
+  width: 100px;
+}
+
+.w-\[200px\]{
+  width: 200px;
+}
+
+.w-\[180px\]{
+  width: 180px;
+}
+
 .max-w-\[400px\]{
   max-width: 400px;
 }
 
 .flex-grow{
   flex-grow: 1;
+}
+
+.scale-75{
+  --tw-scale-x: .75;
+  --tw-scale-y: .75;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-90{
+  --tw-scale-x: .9;
+  --tw-scale-y: .9;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .flex-col{
@@ -684,6 +720,21 @@ video {
   padding-right: 1.25rem;
 }
 
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .ps-3{
   padding-inline-start: 0.75rem;
 }
@@ -725,6 +776,40 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.line-through{
+  text-decoration-line: line-through;
+}
+
+.accent-stone-950{
+  accent-color: #0c0a09;
+}
+
+.opacity-50{
+  opacity: 0.5;
+}
+
+.opacity-0{
+  opacity: 0;
+}
+
+.opacity-20{
+  opacity: 0.2;
+}
+
+.blur{
+  --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.duration-200{
+  transition-duration: 200ms;
+}
+
+/* .list input:checked {
+  width: 30px;
+  height: 30px;
+} */
+
 .last\:block:last-child{
   display: block;
 }
@@ -732,4 +817,8 @@ video {
 .focus-visible\:outline-none:focus-visible{
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.disabled\:opacity-20:disabled{
+  opacity: 0.2;
 }
