--- a/4-learn-js/dom-projects/js-todo/src/app.css
+++ b/4-learn-js/dom-projects/js-todo/src/app.css
@@ -556,6 +556,10 @@ video {
   --tw-contain-style:  ;
 }
 
+.pointer-events-none{
+  pointer-events: none;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -595,10 +599,6 @@ video {
   height: 1.5rem;
 }
 
-.h-full{
-  height: 100%;
-}
-
 .min-h-\[500px\]{
   min-height: 500px;
 }
@@ -611,22 +611,6 @@ video {
   width: 1.5rem;
 }
 
-.w-5{
-  width: 1.25rem;
-}
-
-.w-52{
-  width: 13rem;
-}
-
-.w-\[100px\]{
-  width: 100px;
-}
-
-.w-\[200px\]{
-  width: 200px;
-}
-
 .w-\[180px\]{
   width: 180px;
 }
@@ -637,12 +621,6 @@ video {
 
 .flex-grow{
   flex-grow: 1;
-}
-
-.scale-75{
-  --tw-scale-x: .75;
-  --tw-scale-y: .75;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .scale-90{
@@ -715,24 +693,19 @@ video {
   padding: 0.75rem;
 }
 
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
 
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .ps-3{
@@ -782,14 +755,6 @@ video {
 
 .accent-stone-950{
   accent-color: #0c0a09;
-}
-
-.opacity-50{
-  opacity: 0.5;
-}
-
-.opacity-0{
-  opacity: 0;
 }
 
 .opacity-20{
